--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=91
+
+logging.pattern.dateformat=hh:mm
+
+spring.main.banner-mode=off
+
+spring.thymeleaf.cache=false
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/practica
+spring.datasource.username=usuario_practica
+spring.datasource.password=la_Clave
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
