--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.main.banner-mode=off
 
 spring.thymeleaf.cache=false
 
-
 spring.datasource.url=jdbc:mysql://localhost:3306/practica
 spring.datasource.username=usuario_practica
 spring.datasource.password=la_Clave
@@ -14,9 +13,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-
 spring.jpa.hibernate.ddl-auto=update
-
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.properties.hibernate.connection.trace=true
